// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Drawer /> render should match snapshot when position is left and drawer is closed 1`] = `
<div
  aria-hidden="true"
  aria-modal="true"
  className="DrawerStyle__DrawerContainer-sc-13skgii-0 wwLow aries-drawer"
  data-testid="drawer-container"
  onClick={[Function]}
  open={false}
>
  <div
    className="DrawerStyle__DrawerWrapper-sc-13skgii-1 dNGthb drawer-contentwrapper"
    data-testid="drawer-wrapper"
    onClick={[Function]}
    open={false}
    role="dialog"
    tabIndex={0}
  >
    test-content
  </div>
</div>
`;

exports[`<Drawer /> render should match snapshot when position is left and drawer is open 1`] = `
<div
  aria-hidden="false"
  aria-modal="true"
  className="DrawerStyle__DrawerContainer-sc-13skgii-0 fYRGbP aries-drawer"
  data-testid="drawer-container"
  onClick={[Function]}
  open={true}
>
  <div
    className="DrawerStyle__DrawerWrapper-sc-13skgii-1 fPmHMH drawer-contentwrapper"
    data-testid="drawer-wrapper"
    onClick={[Function]}
    open={true}
    role="dialog"
    tabIndex={0}
  >
    test-content
  </div>
</div>
`;

exports[`<Drawer /> render should match snapshot when position is right and drawer is closed 1`] = `
<div
  aria-hidden="true"
  aria-modal="true"
  className="DrawerStyle__DrawerContainer-sc-13skgii-0 wwLow aries-drawer"
  data-testid="drawer-container"
  onClick={[Function]}
  open={false}
>
  <div
    className="DrawerStyle__DrawerWrapper-sc-13skgii-1 enMoix drawer-contentwrapper"
    data-testid="drawer-wrapper"
    onClick={[Function]}
    open={false}
    role="dialog"
    tabIndex={0}
  >
    test-content
  </div>
</div>
`;

exports[`<Drawer /> render should match snapshot when position is right and drawer is open 1`] = `
<div
  aria-hidden="false"
  aria-modal="true"
  className="DrawerStyle__DrawerContainer-sc-13skgii-0 fYRGbP aries-drawer"
  data-testid="drawer-container"
  onClick={[Function]}
  open={true}
>
  <div
    className="DrawerStyle__DrawerWrapper-sc-13skgii-1 PuCTW drawer-contentwrapper"
    data-testid="drawer-wrapper"
    onClick={[Function]}
    open={true}
    role="dialog"
    tabIndex={0}
  >
    test-content
  </div>
</div>
`;

exports[`<Drawer /> render should match snapshot when position is undefined and drawer is closed 1`] = `
<div
  aria-hidden="true"
  aria-modal="true"
  className="DrawerStyle__DrawerContainer-sc-13skgii-0 wwLow aries-drawer"
  data-testid="drawer-container"
  onClick={[Function]}
  open={false}
>
  <div
    className="DrawerStyle__DrawerWrapper-sc-13skgii-1 enMoix drawer-contentwrapper"
    data-testid="drawer-wrapper"
    onClick={[Function]}
    open={false}
    role="dialog"
    tabIndex={0}
  >
    test-content
  </div>
</div>
`;

exports[`<Drawer /> render should match snapshot when position is undefined and drawer is open 1`] = `
<div
  aria-hidden="false"
  aria-modal="true"
  className="DrawerStyle__DrawerContainer-sc-13skgii-0 fYRGbP aries-drawer"
  data-testid="drawer-container"
  onClick={[Function]}
  open={true}
>
  <div
    className="DrawerStyle__DrawerWrapper-sc-13skgii-1 PuCTW drawer-contentwrapper"
    data-testid="drawer-wrapper"
    onClick={[Function]}
    open={true}
    role="dialog"
    tabIndex={0}
  >
    test-content
  </div>
</div>
`;
